# sdepack

./: LICENSE  README.md  example_sdepack.py  meson.build  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  codeql.yml  docs.yml  release-pypi.yml  test.yml
docs/: api.md  index.md  installation.md  quickstart.md  references.md  theory.md
sdepack/: __init__.py  meson.build  r8_normal.f  r8_uniform.f  rk1_ti_solve.f
src/: __init__.py  meson.build  output.f  r8_normal.f  r8_uniform.f  rk1_ti_solve.f  rk1_tv_solve.f  rk2_ti_solve.f  rk2_tv_solve.f  rk3_ti_solve.f  rk4_ti_solve.f  rk4_tv_solve.f  sdepack.pyf
tests/: conftest.py  test_rk1_ti_solve.py  test_rk1_ti_solve_case_1.py  test_rk1_ti_solve_case_2.py  test_rk1_tv_solve.py  test_rk2_ti_solve.py  test_rk2_tv_solve.py  test_rk3_ti_solve.py  test_rk4_ti_solve.py  test_rk4_tv_solve.py
